--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,6 @@ jobs:
   check:
     env:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
     name: Check & Publish
     runs-on: ubuntu-latest
     timeout-minutes: 60
@@ -101,7 +100,7 @@ jobs:
           java-version: 21
 
       - name: Validate Gradle wrapper
-        uses: gradle/actions/wrapper-validation@v3
+        uses: gradle/wrapper-validation-action@v3
 
       # Gradle check
       - name: Build with Gradle
@@ -112,44 +111,7 @@ jobs:
           python3 -m pip install virtualenv
           echo $GOOGLE_SERVICE_ACCOUNT | base64 -d > ~/.gcp-service-account.json
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/.gcp-service-account.json
-          ./gradlew check javadoc --no-daemon --priority=normal
-
-      # Allure check
-      - name: Auth to Google Cloud
-        id: auth
-        if: ${{ always() && env.GOOGLE_SERVICE_ACCOUNT != 0 }}
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GOOGLE_SERVICE_ACCOUNT }}'
-
-      - uses: rlespinasse/github-slug-action@v4
-
-      - name: Publish allure report
-        uses: andrcuns/allure-publish-action@v2.6.0
-        if: ${{ always() && env.GOOGLE_SERVICE_ACCOUNT != 0 && (github.event.inputs.skip-test == 'false' || github.event.inputs.skip-test == '') }}
-        env:
-          GITHUB_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JAVA_HOME: /usr/lib/jvm/default-jvm/
-        with:
-          storageType: gcs
-          resultsGlob: "**/build/allure-results"
-          bucket: internal-kestra-host
-          baseUrl: "https://internal.kestra.io"
-          prefix: ${{ format('{0}/{1}/{2}', github.repository, env.GITHUB_HEAD_REF_SLUG != '' && env.GITHUB_HEAD_REF_SLUG || github.ref_name, 'allure/java') }}
-          copyLatest: true
-          ignoreMissingResults: true
-
-      # Jacoco
-      - name: 'Set up Cloud SDK'
-        if: ${{ env.GOOGLE_SERVICE_ACCOUNT != 0 }}
-        uses: 'google-github-actions/setup-gcloud@v2'
-
-      - name: 'Copy jacoco files'
-        if: ${{ env.GOOGLE_SERVICE_ACCOUNT != 0 }}
-        run: |
-          mv build/reports/jacoco/testCodeCoverageReport build/reports/jacoco/test/
-          mv build/reports/jacoco/test/testCodeCoverageReport.xml build/reports/jacoco/jacocoTestReport.xml
-          gsutil -m rsync -d -r  build/reports/jacoco/test/ gs://internal-kestra-host/${{ format('{0}/{1}/{2}', github.repository, env.GITHUB_HEAD_REF_SLUG != '' && env.GITHUB_HEAD_REF_SLUG || github.ref_name, 'jacoco') }}
+          ./gradlew check jacoco javadoc --no-daemon --priority=normal
 
       # report test
       - name: Test Report
@@ -235,10 +197,7 @@ jobs:
               io.kestra.plugin:plugin-databricks:$PLUGIN_VERSION
               io.kestra.plugin:plugin-dataform:$PLUGIN_VERSION
               io.kestra.plugin:plugin-dbt:$PLUGIN_VERSION
-              io.kestra.plugin:plugin-debezium-db2:$PLUGIN_VERSION
-              io.kestra.plugin:plugin-debezium-mongodb:$PLUGIN_VERSION
               io.kestra.plugin:plugin-debezium-mysql:$PLUGIN_VERSION
-              io.kestra.plugin:plugin-debezium-oracle:$PLUGIN_VERSION
               io.kestra.plugin:plugin-debezium-postgres:$PLUGIN_VERSION
               io.kestra.plugin:plugin-debezium-sqlserver:$PLUGIN_VERSION
               io.kestra.plugin:plugin-docker:$PLUGIN_VERSION
